--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --port 5173",
     "build": "vite build && tsc",
     "serve": "vite preview",
     "test": "vitest run",
@@ -24,6 +24,7 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "axios": "^1.13.1",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
