--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.28.0",
+    "@ebay/nice-modal-react": "^1.2.13",
     "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^5.2.2",
     "@storybook/react-vite": "^9.1.9",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
@@ -34,6 +36,7 @@
     "react-icons": "^5.5.0",
     "storybook": "^9.1.9",
     "tailwindcss": "^4.0.6",
+    "zod": "^4.2.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
