--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.132.0",
     "axios": "^1.13.1",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
