--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@casl/ability": "^6.7.5",
     "@chakra-ui/react": "^3.28.0",
     "@ebay/nice-modal-react": "^1.2.13",
     "@emotion/react": "^11.14.0",
