feat: add dark mode and minor adjusts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "Base Gerador",
+  "name": "Base Gerador",
   "icons": [
     {
       "src": "favicon.ico",
